--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ button{
     border: none;
     padding: 10px;
     width: 40px;
+    background-color: #ffffff;
 }
 
 .row:last-child > button:first-child{
