--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body{
     display: flex;
     flex-direction: column;
     gap: 8px;
+    background-color: #dfe4ea;
     padding: 10px;
 }
 .row{
