--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ button{
     border: none;
     padding: 10px;
     width: 100px;
+    aspect-ratio: 1/1;
     background-color: #ffffff;
     border-radius: 4px;
 }
