--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ button{
 }
 
 .display{
-    padding: 20px 0;
+    padding: 10% 0;
     text-align: center;
     background-color: #000000;
     color: #ffffff;
