Send display text to right

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ button{
 
 .display{
     padding: 10% 0;
-    text-align: center;
+    text-align: right;
     background-color: #000000;
     color: #ffffff;
     border-radius: 4px;
