--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ button{
 }
 
 .display{
-    padding: 10% 0;
+    padding: 10% 5%;
     text-align: right;
     background-color: #000000;
     color: #ffffff;
