--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body{
     display: flex;
     justify-content:center;
     align-items:center;
+    font-family: 'Passion One', cursive;
 }
 
 .container{
