--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 }
 body{
     margin: 0;
-    background-color: #ffeaa7;
+    background-color: #ffffff;
     height:100vh;
     display: flex;
     justify-content:center;
